fix: radioGroup add vertical-align, close #1573

--- a/packages/semi-foundation/radio/radio.scss
+++ b/packages/semi-foundation/radio/radio.scss
@@ -83,6 +83,7 @@ $inner-width: $width-icon-medium;
     &-buttonRadioGroup {
         // Button needs to be positioned relative to parent
         position: relative;
+        vertical-align: bottom; // Fix 1573
         padding: $spacing-radio_buttonRadioGroup_middle-padding;
         border-radius: $radius-radio_buttonRadio;
         line-height: $font-radio_buttonRadioGroup_middle-lineHeight;
